# spectrapepper

./: .gitignore  .zenodo.json  404.html  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  contributions.html  examples.html  functions.html  genindex.html  index.html  introduction.html  mkdocs.yml  objects.inv  py-modindex.html  quickstart.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  codecov.yml  codeql.yml  docs.yml  pypi.yml  updater.yml  workflow.yml
_modules/: index.html
_sources/: examples.rst.txt  functions.rst.txt  index.rst.txt  introduction.rst.txt
docs/: .buildinfo  conf.py  contributing.md  contributions.html  examples.html  functions.html  genindex.html  index.html  index.md  index.rst  installation.md  introduction.html  my_functions.py  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  spectrapepper.md  usage.md
docs/_modules/: functions.html  index.html
docs/_sources/: contributions.rst  contributions.rst.txt  examples.rst  examples.rst.txt  functions.rst  functions.rst.txt  index.rst.txt  (+3 more)
examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py
paper/: paper.bib  paper.bib.url  paper.md  paper.md.url
spectrapepper/: __init__.py  functions.py  spectrapepper.py
sphinx/: conf.py  functions.py  functions.rst
tests/: .coverage  __init__.py  coverage.xml  functions.py  test_spectrapepper.py
(+22 files in other folders)
