[bumpversion]
current_version = 0.1.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:spectrapepper/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[options.package_data]
* = *.txt

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]

